# LocalTinyImg

./: LICENSE  README.md  pyproject.toml
localtinyimg/: run_streamlit.py
localtinyimg/process/: tiny_image.py
